--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "7ihin",
   "version": "1.0.0",
-  "description": "Hello, I'm Kwon Minjae.\r I'm a developer passionate about robotics, AI, and software engineering.",
-  "main": "readmeUpdate.js",
+  "description": "",
+  "main": "index.js",
   "type":"module",
   "scripts": {
-    "start": "node readmeUpdate.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
